<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#ecf0f1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/terms_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#c0392b"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_term_body"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="6dp"
            android:padding="10dp"
            android:background="#ecf0f1"
            android:text="@string/terms"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/policy_title"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#c0392b"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tv_policy_body"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="6dp"
            android:padding="10dp"
            android:background="#ecf0f1"
            android:text="@string/policy"
            android:textSize="15sp"/>

    </LinearLayout>


</LinearLayout>