<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kt.iot.mobile.ui.activity.MainActivity"
    android:background="#27284d" >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:background="#27284d">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="95dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:layout_collapseMode="parallax">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="40dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="35dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="left">

                        <TextView
                            android:id="@+id/main_account_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#FFFFFF"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_account"
                            android:textColor="#ffa939"
                            android:textSize="25sp"/>

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/main_hello"
                        android:textColor="#ffa939"
                        android:textSize="25sp"/>

                </LinearLayout>

                <!--</RelativeLayout>-->

                <!--<Spinner-->
                <!--android:id="@+id/svctgt_spinner"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="50dp"-->
                <!--android:layout_gravity="center_horizontal"/>-->

            </LinearLayout>

            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="center_horizontal"
                    app:layout_collapseMode="pin">

                    <ImageView
                        android:id="@+id/main_home"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/homemenu"
                        android:layout_alignParentLeft="true"/>

                    <!--<RelativeLayout-->
                    <!--android:id="@+id/search_area"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignParentRight="true"-->
                    <!--android:foreground="?android:attr/selectableItemBackground">-->

                    <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="2px"-->
                    <!--android:layout_alignParentBottom="true"-->
                    <!--android:background="#FFFFFF" />-->

                    <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:text="@string/search_guide"-->
                    <!--android:textColor="#FFFFFF"-->
                    <!--android:textSize="15sp" />-->

                    <ImageView
                        android:id="@+id/search_area"
                        android:layout_width="27dp"
                        android:layout_height="27dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/search_btn"/>

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/data_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="130dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/device_loading"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tgt_loading_message"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.kt.iot.mobile.ui.activity.MainActivity"
        tools:showIn="@layout/activity_drawer"
        android:visibility="invisible">

        <fragment
            android:id="@+id/device_list_fragment"
            android:name="com.kt.iot.mobile.ui.fragment.device.list.DeviceListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

        <fragment
            android:id="@+id/device_fragment"
            android:name="com.kt.iot.mobile.ui.fragment.device.DeviceFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_weight="1"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>